--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>1.2</version>
+	    <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
@@ -66,10 +67,7 @@
             <version>5.1.25</version>
         </dependency>
 	<dependency>
-    <groupId>commons-logging</groupId>
-    <artifactId>commons-logging</artifactId>
-    <version>1.1.1</version>
-</dependency>
+ 
     </dependencies>
 
     <prerequisites>
