--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>1.2</version>
-	    <scope>compile</scope>
+	    <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
