--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,4 +15,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Phase4-SIP-Mock-Server-NYPL
-      run: docker build ./Phase4-SIP-Mock-Server -t NYPL-Mock-Server
+      run: docker build ./Phase4-SIP-Mock-Server -t Phase4-SIP-Mock-Server
+
